gitea/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: git
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.255.111
  selector:
    app: gitea
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 3000

    - protocol: TCP
      port: 22
      name: ssh
      targetPort: 22
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: git
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      securityContext:
        runAsUser: 3001
        runAsGroup: 3001
        fsGroup: 3001
      volumes:
        - name: gitea-vol
          persistentVolumeClaim:
            claimName: gitea
      containers:
      - name: gitea
        image: gitea/gitea:28.0.0-rootless
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
        resources:
          requests:
            memory: "125Mi"
            cpu: "250m"
          limits:
            memory: "1000Mi"
            cpu: "1000m"
        ports:
        - containerPort: 3000
        - containerPort: 22

        volumeMounts:
          - mountPath: /var/lib/gitea
            name: gitea-vol
            subPath: data
          - mountPath: /etc/gitea
            name: gitea-vol
            subPath: config
