gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: git
spec:
  defaultBackend:
    service:
      name: gitea
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - git
